# Vertix

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: 2d_game.rs  collision_3d.rs  compute.rs  draw_ray.rs  minecraft.rs  rotating_cubes.rs  simple_custom_mesh.rs  simple_ui_button.rs  threed_cam.rs
src/: app_resource.rs  assets.rs  camera.rs  camera_shader.wgsl  collision.rs  engine.rs  event.rs  instance.rs  lib.rs  loader.rs  local_space_shader.wgsl  main.rs  model.rs  mouse_picking.rs  prefabs.rs  primitives.rs  render.rs  renderer.rs  resources.rs  shader.rs  shader.wgsl  shapes.rs  state.rs  structs.rs  testuingcode.rs  texture.rs  util.rs  window.rs
src/collision/: collision_fns_3d.rs  structs_2d.rs  structs_3d.rs
