[package]
name = "vertix"
version = "0.4.10"
authors = ["Jax Bulbrook <jaxbulbrook@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A cross-platform performant ECS game engine"
repository = "https://github.com/Jax-Hax/Vertix/"
keywords = ["gamedev", "graphics","game-engine"]
categories = ["game-engines", "gui"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
wgpu = { version = "0.17"}
winit = "0.28"
instant = "0.1"
getrandom = { version = "0.2", features = ["js"] }
glam = "0.24.1"
bevy_ecs = "0.11.3"
slab = "0.4.9"
time = "0.3.30"

[dev-dependencies]
noise = "0.8"
futures-intrusive = "0.5.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
